getline and add reattach-to-mac to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,3 +7,4 @@ set -g default-terminal "screen-256color"
 set -g status-bg colour34
 set -g status-fg colour16
 set-option -sg escape-time 200
+set -g default-command "reattach-to-user-namespace -l /bin/bash"
